make code readable